Another try at fixing jumping

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  position: relative;
   width: 100%;
   height: 100vh;
   margin: 0;
@@ -77,6 +76,9 @@ body {
   height: 30px;
   opacity: 80%;
   background-size: cover;
+  opacity: 0;
+  transition: all 0.6s ease-in-out;
+  transform: translate(0, -3vh);
 }
 #fb {
   background-image: url(res/social_logos/fb.png);
